<resources>
    <string name="app_name">task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job</string>
    <string name="gender">Gender</string>
    <string name="name_required">Name required</string>
    <string name="age_required">Age required</string>
    <string name="job_title_required">Job title required</string>
    <string name="gender_required">Gender required</string>
    <string name="select_gender">Select gender</string>
    <string name="save">Save</string>
    <string name="data_inserted">Data inserted successfully</string>
    <string name="history">Saved Items</string>
    <string name="name_">Name:</string>
    <string name="age_">Age:</string>
    <string name="job_title_">Job title:</string>
    <string name="gender_">Gender:</string>
    <string-array name="gender_list" >
        <item >Male</item>
        <item >Female</item>
    </string-array>
</resources>