<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.khidrew.domian.entities.InfoModel" />
        

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_bg"
        >

        <TextView
            android:id="@+id/tv_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/name_"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:includeFontPadding="false"
            android:text="@{data.name}"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/tv_name_txt"
            app:layout_constraintTop_toTopOf="@+id/tv_name_txt"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tv_age_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/age_"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:includeFontPadding="false"
            android:text="@{String.valueOf(data.age)}"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_age_txt"
            app:layout_constraintStart_toEndOf="@+id/tv_age_txt" />

        <TextView
            android:id="@+id/tv_job_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            android:text="@string/job_title_"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_age" />

        <TextView
            android:id="@+id/tv_job"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:includeFontPadding="false"
            android:text="@{data.job}"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_job_txt"
            app:layout_constraintStart_toEndOf="@+id/tv_job_txt" />

        <TextView
            android:id="@+id/tv_gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            android:text="@string/gender_"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_job" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:includeFontPadding="false"
            android:text="@{data.gender}"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_gender_txt"
            app:layout_constraintStart_toEndOf="@+id/tv_gender_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>