<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.khidrew.task.ui.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.FirstFragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/darker_gray"
            app:helperText='@{viewModel.name.isEmpty() ? (viewModel.isSaveClicked() ? @string/name_required : "") : ""}'
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:padding="16dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textSize="14sp"
                android:hint="@string/name"
                android:text="@={viewModel.name}"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:background="@drawable/rounded_bg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/darker_gray"
            app:helperText='@{viewModel.age.isEmpty() ? (viewModel.isSaveClicked() ? @string/age_required : "") : ""}'
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:padding="16dp"
                android:inputType="number"
                android:maxLength="2"
                android:imeOptions="actionNext"
                android:textSize="14sp"
                android:hint="@string/age"
                android:text="@={viewModel.age}"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:background="@drawable/rounded_bg"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="false"
            app:helperText='@{viewModel.gender.isEmpty() ? (viewModel.isSaveClicked() ? @string/gender_required : "") : ""}'
            android:layout_marginHorizontal="12dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/darker_gray">

            <com.khidrew.task.widget.ShowDropDownAutoCompleteTextView
                android:id="@+id/act_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:hint="@string/select_gender"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="16dp"
                android:text="@={viewModel.gender}"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_job"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/darker_gray"
            app:helperText='@{viewModel.jobTitle.isEmpty() ? (viewModel.isSaveClicked() ? @string/job_title_required : "") : ""}'
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:padding="16dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textSize="14sp"
                android:hint="@string/job_title"
                android:text="@={viewModel.jobTitle}"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:background="@drawable/rounded_bg"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:backgroundTint="@null"
             />
    </LinearLayout>
</layout>